Parser/Grammar/SpecFlowLangParser.cs
// $ANTLR 3.1.2 SpecFlowLang.g 2009-10-16 10:52:11

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 168, 219
// Unreachable code detected.
#pragma warning disable 162
namespace  TechTalk.SpecFlow.Parser.Grammar 
{

using System;
using Antlr.Runtime;
using IList 		= System.Collections.IList;
using ArrayList 	= System.Collections.ArrayList;
using Stack 		= Antlr.Runtime.Collections.StackList;

using IDictionary	= System.Collections.IDictionary;
using Hashtable 	= System.Collections.Hashtable;


using Antlr.Runtime.Tree;

public partial class SpecFlowLangParser : Parser
{
    public static readonly string[] tokenNames = new string[] 
	{
        "<invalid>", 
		"<EOR>", 
		"<DOWN>", 
		"<UP>", 
		"FEATURE", 
		"DESCRIPTIONLINE", 
		"BACKGROUND", 
		"SCENARIOS", 
		"SCENARIO", 
		"SCENARIOOUTLINE", 
		"EXAMPLES", 
		"EXAMPLESET", 
		"STEPS", 
		"GIVEN", 
		"WHEN", 
		"THEN", 
		"TEXT", 
		"AND", 
		"BUT", 
		"TAGS", 
		"TAG", 
		"WORD", 
		"MULTILINETEXT", 
		"INDENT", 
		"LINE", 
		"TABLE", 
		"HEADER", 
		"BODY", 
		"ROW", 
		"CELL", 
		"WS", 
		"AT", 
		"WORDCHAR", 
		"T_BACKGROUND", 
		"NEWLINE", 
		"WSCHAR", 
		"NONWCHR", 
		"NEWLINECHR", 
		"NONNLCHR", 
		"COMMENT", 
		"'Feature:'", 
		"'Scenario:'", 
		"'Scenario Outline:'", 
		"'Examples:'", 
		"'Scenarios:'", 
		"'And'", 
		"'But'", 
		"'Given'", 
		"'When'", 
		"'Then'", 
		"'\"\"\"'", 
		"'|'"
    };

    public const int NEWLINECHR = 37;
    public const int ROW = 28;
    public const int T_BACKGROUND = 33;
    public const int TABLE = 25;
    public const int CELL = 29;
    public const int DESCRIPTIONLINE = 5;
    public const int AND = 17;
    public const int EOF = -1;
    public const int INDENT = 23;
    public const int WORD = 21;
    public const int AT = 31;
    public const int BACKGROUND = 6;
    public const int T__51 = 51;
    public const int THEN = 15;
    public const int MULTILINETEXT = 22;
    public const int NONWCHR = 36;
    public const int BODY = 27;
    public const int GIVEN = 13;
    public const int HEADER = 26;
    public const int COMMENT = 39;
    public const int SCENARIO = 8;
    public const int T__50 = 50;
    public const int T__42 = 42;
    public const int T__43 = 43;
    public const int T__40 = 40;
    public const int T__41 = 41;
    public const int T__46 = 46;
    public const int T__47 = 47;
    public const int T__44 = 44;
    public const int T__45 = 45;
    public const int EXAMPLESET = 11;
    public const int T__48 = 48;
    public const int T__49 = 49;
    public const int BUT = 18;
    public const int TAGS = 19;
    public const int EXAMPLES = 10;
    public const int WSCHAR = 35;
    public const int TEXT = 16;
    public const int NONNLCHR = 38;
    public const int LINE = 24;
    public const int FEATURE = 4;
    public const int TAG = 20;
    public const int SCENARIOS = 7;
    public const int WORDCHAR = 32;
    public const int WS = 30;
    public const int NEWLINE = 34;
    public const int SCENARIOOUTLINE = 9;
    public const int WHEN = 14;
    public const int STEPS = 12;

    // delegates
    // delegators



        public SpecFlowLangParser(ITokenStream input)
    		: this(input, new RecognizerSharedState()) {
        }

        public SpecFlowLangParser(ITokenStream input, RecognizerSharedState state)
    		: base(input, state) {
            InitializeCyclicDFAs();

             
        }
        
    protected ITreeAdaptor adaptor = new CommonTreeAdaptor();

    public ITreeAdaptor TreeAdaptor
    {
        get { return this.adaptor; }
        set {
    	this.adaptor = value;
    	}
    }

    override public string[] TokenNames {
		get { return SpecFlowLangParser.tokenNames; }
    }

    override public string GrammarFileName {
		get { return "SpecFlowLang.g"; }
    }


    public class feature_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "feature"
    // SpecFlowLang.g:44:1: feature : ( newlineWithSpaces )? ( tags )? ( WS )? 'Feature:' ( WS )? text newlineWithSpaces ( descriptionLine )* ( background )? ( scenarioKind )* ( WS )? EOF -> ^( FEATURE ( tags )? text ( descriptionLine )* ( background )? ^( SCENARIOS ( scenarioKind )* ) ) ;
    public SpecFlowLangParser.feature_return feature() // throws RecognitionException [1]
    {   
        SpecFlowLangParser.feature_return retval = new SpecFlowLangParser.feature_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        IToken WS3 = null;
        IToken string_literal4 = null;
        IToken WS5 = null;
        IToken WS11 = null;
        IToken EOF12 = null;
        SpecFlowLangParser.newlineWithSpaces_return newlineWithSpaces1 = default(SpecFlowLangParser.newlineWithSpaces_return);

        SpecFlowLangParser.tags_return tags2 = default(SpecFlowLangParser.tags_return);

        SpecFlowLangParser.text_return text6 = default(SpecFlowLangParser.text_return);

        SpecFlowLangParser.newlineWithSpaces_return newlineWithSpaces7 = default(SpecFlowLangParser.newlineWithSpaces_return);

        SpecFlowLangParser.descriptionLine_return descriptionLine8 = default(SpecFlowLangParser.descriptionLine_return);

        SpecFlowLangParser.background_return background9 = default(SpecFlowLangParser.background_return);

        SpecFlowLangParser.scenarioKind_return scenarioKind10 = default(SpecFlowLangParser.scenarioKind_return);


        object WS3_tree=null;
        object string_literal4_tree=null;
        object WS5_tree=null;
        object WS11_tree=null;
        object EOF12_tree=null;
        RewriteRuleTokenStream stream_WS = new RewriteRuleTokenStream(adaptor,"token WS");
        RewriteRuleTokenStream stream_40 = new RewriteRuleTokenStream(adaptor,"token 40");
        RewriteRuleTokenStream stream_EOF = new RewriteRuleTokenStream(adaptor,"token EOF");
        RewriteRuleSubtreeStream stream_tags = new RewriteRuleSubtreeStream(adaptor,"rule tags");
        RewriteRuleSubtreeStream stream_text = new RewriteRuleSubtreeStream(adaptor,"rule text");
        RewriteRuleSubtreeStream stream_scenarioKind = new RewriteRuleSubtreeStream(adaptor,"rule scenarioKind");
        RewriteRuleSubtreeStream stream_background = new RewriteRuleSubtreeStream(adaptor,"rule background");
        RewriteRuleSubtreeStream stream_newlineWithSpaces = new RewriteRuleSubtreeStream(adaptor,"rule newlineWithSpaces");
        RewriteRuleSubtreeStream stream_descriptionLine = new RewriteRuleSubtreeStream(adaptor,"rule descriptionLine");
        try 
    	{
            // SpecFlowLang.g:45:5: ( ( newlineWithSpaces )? ( tags )? ( WS )? 'Feature:' ( WS )? text newlineWithSpaces ( descriptionLine )* ( background )? ( scenarioKind )* ( WS )? EOF -> ^( FEATURE ( tags )? text ( descriptionLine )* ( background )? ^( SCENARIOS ( scenarioKind )* ) ) )
            // SpecFlowLang.g:45:9: ( newlineWithSpaces )? ( tags )? ( WS )? 'Feature:' ( WS )? text newlineWithSpaces ( descriptionLine )* ( background )? ( scenarioKind )* ( WS )? EOF
            {
            	// SpecFlowLang.g:45:9: ( newlineWithSpaces )?
            	int alt1 = 2;
            	int LA1_0 = input.LA(1);

            	if ( (LA1_0 == WS) )
            	{
            	    int LA1_1 = input.LA(2);

            	    if ( (LA1_1 == NEWLINE) )
            	    {
            	        alt1 = 1;
            	    }
            	}
            	else if ( (LA1_0 == NEWLINE) )
            	{
            	    alt1 = 1;
            	}
            	switch (alt1) 
            	{
            	    case 1 :
            	        // SpecFlowLang.g:0:0: newlineWithSpaces
            	        {
            	        	PushFollow(FOLLOW_newlineWithSpaces_in_feature264);
            	        	newlineWithSpaces1 = newlineWithSpaces();
            	        	state.followingStackPointer--;
            	        	if (state.failed) return retval;
            	        	if ( (state.backtracking==0) ) stream_newlineWithSpaces.Add(newlineWithSpaces1.Tree);

            	        }
            	        break;

            	}

            	// SpecFlowLang.g:46:9: ( tags )?
            	int alt2 = 2;
            	int LA2_0 = input.LA(1);

            	if ( (LA2_0 == WS) )
            	{
            	    int LA2_1 = input.LA(2);

            	    if ( (LA2_1 == AT) )
            	    {
            	        alt2 = 1;
            	    }
            	}
            	else if ( (LA2_0 == AT) )
            	{
            	    alt2 = 1;
            	}
            	switch (alt2) 
            	{
            	    case 1 :
            	        // SpecFlowLang.g:0:0: tags
            	        {
            	        	PushFollow(FOLLOW_tags_in_feature275);
            	        	tags2 = tags();
            	        	state.followingStackPointer--;
            	        	if (state.failed) return retval;
            	        	if ( (state.backtracking==0) ) stream_tags.Add(tags2.Tree);

            	        }
            	        break;

            	}

            	// SpecFlowLang.g:47:9: ( WS )?
            	int alt3 = 2;
            	int LA3_0 = input.LA(1);

            	if ( (LA3_0 == WS) )
            	{
            	    alt3 = 1;
            	}
            	switch (alt3) 
            	{
            	    case 1 :
            	        // SpecFlowLang.g:0:0: WS
            	        {
            	        	WS3=(IToken)Match(input,WS,FOLLOW_WS_in_feature286); if (state.failed) return retval; 
            	        	if ( (state.backtracking==0) ) stream_WS.Add(WS3);


            	        }
            	        break;

            	}

            	string_literal4=(IToken)Match(input,40,FOLLOW_40_in_feature289); if (state.failed) return retval; 
            	if ( (state.backtracking==0) ) stream_40.Add(string_literal4);

            	// SpecFlowLang.g:47:24: ( WS )?
            	int alt4 = 2;
            	int LA4_0 = input.LA(1);

            	if ( (LA4_0 == WS) )
            	{
            	    alt4 = 1;
            	}
            	switch (alt4) 
            	{
            	    case 1 :
            	        // SpecFlowLang.g:0:0: WS
            	        {
            	        	WS5=(IToken)Match(input,WS,FOLLOW_WS_in_feature291); if (state.failed) return retval; 
            	        	if ( (state.backtracking==0) ) stream_WS.Add(WS5);


            	        }
            	        break;

            	}

            	PushFollow(FOLLOW_text_in_feature294);
            	text6 = text();
            	state.followingStackPointer--;
            	if (state.failed) return retval;
            	if ( (state.backtracking==0) ) stream_text.Add(text6.Tree);
            	PushFollow(FOLLOW_newlineWithSpaces_in_feature296);
            	newlineWithSpaces7 = newlineWithSpaces();
            	state.followingStackPointer--;
            	if (state.failed) return retval;
            	if ( (state.backtracking==0) ) stream_newlineWithSpaces.Add(newlineWithSpaces7.Tree);
            	// SpecFlowLang.g:48:9: ( descriptionLine )*
            	do 
            	{
            	    int alt5 = 2;
            	    int LA5_0 = input.LA(1);

            	    if ( (LA5_0 == WS) )
            	    {
            	        int LA5_1 = input.LA(2);

            	        if ( (LA5_1 == WORDCHAR) )
            	        {
            	            alt5 = 1;
            	        }


            	    }
            	    else if ( (LA5_0 == WORDCHAR) )
            	    {
            	        alt5 = 1;
            	    }


            	    switch (alt5) 
            		{
            			case 1 :
            			    // SpecFlowLang.g:0:0: descriptionLine
            			    {
            			    	PushFollow(FOLLOW_descriptionLine_in_feature306);
            			    	descriptionLine8 = descriptionLine();
            			    	state.followingStackPointer--;
            			    	if (state.failed) return retval;
            			    	if ( (state.backtracking==0) ) stream_descriptionLine.Add(descriptionLine8.Tree);

            			    }
            			    break;

            			default:
            			    goto loop5;
            	    }
            	} while (true);

            	loop5:
            		;	// Stops C# compiler whining that label 'loop5' has no statements

            	// SpecFlowLang.g:49:9: ( background )?
            	int alt6 = 2;
            	int LA6_0 = input.LA(1);

            	if ( (LA6_0 == WS) )
            	{
            	    int LA6_1 = input.LA(2);

            	    if ( (LA6_1 == T_BACKGROUND) )
            	    {
            	        alt6 = 1;
            	    }
            	}
            	else if ( (LA6_0 == T_BACKGROUND) )
            	{
            	    alt6 = 1;
            	}
            	switch (alt6) 
            	{
            	    case 1 :
            	        // SpecFlowLang.g:0:0: background
            	        {
            	        	PushFollow(FOLLOW_background_in_feature317);
            	        	background9 = background();
            	        	state.followingStackPointer--;
            	        	if (state.failed) return retval;
            	        	if ( (state.backtracking==0) ) stream_background.Add(background9.Tree);

            	        }
            	        break;

            	}

            	// SpecFlowLang.g:50:9: ( scenarioKind )*
            	do 
            	{
            	    int alt7 = 2;
            	    int LA7_0 = input.LA(1);

            	    if ( (LA7_0 == WS) )
            	    {
            	        int LA7_1 = input.LA(2);

            	        if ( (LA7_1 == AT || (LA7_1 >= 41 && LA7_1 <= 42)) )
            	        {
            	            alt7 = 1;
            	        }


            	    }
            	    else if ( (LA7_0 == AT || (LA7_0 >= 41 && LA7_0 <= 42)) )
            	    {
            	        alt7 = 1;
            	    }


            	    switch (alt7) 
            		{
            			case 1 :
            			    // SpecFlowLang.g:0:0: scenarioKind
            			    {
            			    	PushFollow(FOLLOW_scenarioKind_in_feature328);
            			    	scenarioKind10 = scenarioKind();
            			    	state.followingStackPointer--;
            			    	if (state.failed) return retval;
            			    	if ( (state.backtracking==0) ) stream_scenarioKind.Add(scenarioKind10.Tree);

            			    }
            			    break;

            			default:
            			    goto loop7;
            	    }
            	} while (true);

            	loop7:
            		;	// Stops C# compiler whining that label 'loop7' has no statements

            	// SpecFlowLang.g:50:23: ( WS )?
            	int alt8 = 2;
            	int LA8_0 = input.LA(1);

            	if ( (LA8_0 == WS) )
            	{
            	    alt8 = 1;
            	}
            	switch (alt8) 
            	{
            	    case 1 :
            	        // SpecFlowLang.g:0:0: WS
            	        {
            	        	WS11=(IToken)Match(input,WS,FOLLOW_WS_in_feature331); if (state.failed) return retval; 
            	        	if ( (state.backtracking==0) ) stream_WS.Add(WS11);


            	        }
            	        break;

            	}

            	EOF12=(IToken)Match(input,EOF,FOLLOW_EOF_in_feature334); if (state.failed) return retval; 
            	if ( (state.backtracking==0) ) stream_EOF.Add(EOF12);



            	// AST REWRITE
            	// elements:          text, scenarioKind, tags, background, descriptionLine
            	// token labels:      
            	// rule labels:       retval
            	// token list labels: 
            	// rule list labels:  
            	// wildcard labels: 
            	if ( (state.backtracking==0) ) {
            	retval.Tree = root_0;
            	RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval", retval!=null ? retval.Tree : null);

            	root_0 = (object)adaptor.GetNilNode();
            	// 51:9: -> ^( FEATURE ( tags )? text ( descriptionLine )* ( background )? ^( SCENARIOS ( scenarioKind )* ) )
            	{
            	    // SpecFlowLang.g:51:12: ^( FEATURE ( tags )? text ( descriptionLine )* ( background )? ^( SCENARIOS ( scenarioKind )* ) )
            	    {
            	    object root_1 = (object)adaptor.GetNilNode();
            	    root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(FEATURE, "FEATURE"), root_1);

            	    // SpecFlowLang.g:51:22: ( tags )?
            	    if ( stream_tags.HasNext() )
            	    {
            	        adaptor.AddChild(root_1, stream_tags.NextTree());

            	    }
            	    stream_tags.Reset();
            	    adaptor.AddChild(root_1, stream_text.NextTree());
            	    // SpecFlowLang.g:51:33: ( descriptionLine )*
            	    while ( stream_descriptionLine.HasNext() )
            	    {
            	        adaptor.AddChild(root_1, stream_descriptionLine.NextTree());

            	    }
            	    stream_descriptionLine.Reset();
            	    // SpecFlowLang.g:51:50: ( background )?
            	    if ( stream_background.HasNext() )
            	    {
            	        adaptor.AddChild(root_1, stream_background.NextTree());

            	    }
            	    stream_background.Reset();
            	    // SpecFlowLang.g:52:13: ^( SCENARIOS ( scenarioKind )* )
            	    {
            	    object root_2 = (object)adaptor.GetNilNode();
            	    root_2 = (object)adaptor.BecomeRoot((object)adaptor.Create(SCENARIOS, "SCENARIOS"), root_2);

            	    // SpecFlowLang.g:52:25: ( scenarioKind )*
            	    while ( stream_scenarioKind.HasNext() )
            	    {
            	        adaptor.AddChild(root_2, stream_scenarioKind.NextTree());

            	    }
            	    stream_scenarioKind.Reset();

            	    adaptor.AddChild(root_1, root_2);
            	    }

            	    adaptor.AddChild(root_0, root_1);
            	    }

            	}

            	retval.Tree = root_0;retval.Tree = root_0;}
            }

            retval.Stop = input.LT(-1);

            if ( (state.backtracking==0) )
            {	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);}
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "feature"

    public class tags_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "tags"
    // SpecFlowLang.g:56:1: tags : ( WS )? ( tag )+ -> ^( TAGS ( tag )+ ) ;
    public SpecFlowLangParser.tags_return tags() // throws RecognitionException [1]
    {   
        SpecFlowLangParser.tags_return retval = new SpecFlowLangParser.tags_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        IToken WS13 = null;
        SpecFlowLangParser.tag_return tag14 = default(SpecFlowLangParser.tag_return);


        object WS13_tree=null;
        RewriteRuleTokenStream stream_WS = new RewriteRuleTokenStream(adaptor,"token WS");
        RewriteRuleSubtreeStream stream_tag = new RewriteRuleSubtreeStream(adaptor,"rule tag");
        try 
    	{
            // SpecFlowLang.g:57:5: ( ( WS )? ( tag )+ -> ^( TAGS ( tag )+ ) )
            // SpecFlowLang.g:57:9: ( WS )? ( tag )+
            {
            	// SpecFlowLang.g:57:9: ( WS )?
            	int alt9 = 2;
            	int LA9_0 = input.LA(1);

            	if ( (LA9_0 == WS) )
            	{
            	    alt9 = 1;
            	}
            	switch (alt9) 
            	{
            	    case 1 :
            	        // SpecFlowLang.g:0:0: WS
            	        {
            	        	WS13=(IToken)Match(input,WS,FOLLOW_WS_in_tags411); if (state.failed) return retval; 
            	        	if ( (state.backtracking==0) ) stream_WS.Add(WS13);


            	        }
            	        break;

            	}

            	// SpecFlowLang.g:57:13: ( tag )+
            	int cnt10 = 0;
            	do 
            	{
            	    int alt10 = 2;
            	    int LA10_0 = input.LA(1);

            	    if ( (LA10_0 == AT) )
            	    {
            	        alt10 = 1;
            	    }


            	    switch (alt10) 
            		{
            			case 1 :
            			    // SpecFlowLang.g:0:0: tag
            			    {
            			    	PushFollow(FOLLOW_tag_in_tags414);
            			    	tag14 = tag();
            			    	state.followingStackPointer--;
            			    	if (state.failed) return retval;
            			    	if ( (state.backtracking==0) ) stream_tag.Add(tag14.Tree);

            			    }
            			    break;

            			default:
            			    if ( cnt10 >= 1 ) goto loop10;
            			    if ( state.backtracking > 0 ) {state.failed = true; return retval;}
            		            EarlyExitException eee10 =
            		                new EarlyExitException(10, input);
            		            throw eee10;
            	    }
            	    cnt10++;
            	} while (true);

            	loop10:
            		;	// Stops C# compiler whinging that label 'loop10' has no statements



            	// AST REWRITE
            	// elements:          tag
            	// token labels:      
            	// rule labels:       retval
            	// token list labels: 
            	// rule list labels:  
            	// wildcard labels: 
            	if ( (state.backtracking==0) ) {
            	retval.Tree = root_0;
            	RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval", retval!=null ? retval.Tree : null);

            	root_0 = (object)adaptor.GetNilNode();
            	// 58:9: -> ^( TAGS ( tag )+ )
            	{
            	    // SpecFlowLang.g:58:12: ^( TAGS ( tag )+ )
            	    {
            	    object root_1 = (object)adaptor.GetNilNode();
            	    root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(TAGS, "TAGS"), root_1);

            	    if ( !(stream_tag.HasNext()) ) {
            	        throw new RewriteEarlyExitException();
            	    }
            	    while ( stream_tag.HasNext() )
            	    {
            	        adaptor.AddChild(root_1, stream_tag.NextTree());

            	    }
            	    stream_tag.Reset();

            	    adaptor.AddChild(root_0, root_1);
            	    }

            	}

            	retval.Tree = root_0;retval.Tree = root_0;}
            }

            retval.Stop = input.LT(-1);

            if ( (state.backtracking==0) )
            {	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);}
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "tags"

    public class tag_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "tag"
    // SpecFlowLang.g:61:1: tag : AT word ( newlineWithSpaces | WS ) -> ^( TAG word ) ;
    public SpecFlowLangParser.tag_return tag() // throws RecognitionException [1]
    {   
        SpecFlowLangParser.tag_return retval = new SpecFlowLangParser.tag_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        IToken AT15 = null;
        IToken WS18 = null;
        SpecFlowLangParser.word_return word16 = default(SpecFlowLangParser.word_return);

        SpecFlowLangParser.newlineWithSpaces_return newlineWithSpaces17 = default(SpecFlowLangParser.newlineWithSpaces_return);


        object AT15_tree=null;
        object WS18_tree=null;
        RewriteRuleTokenStream stream_AT = new RewriteRuleTokenStream(adaptor,"token AT");
        RewriteRuleTokenStream stream_WS = new RewriteRuleTokenStream(adaptor,"token WS");
        RewriteRuleSubtreeStream stream_word = new RewriteRuleSubtreeStream(adaptor,"rule word");
        RewriteRuleSubtreeStream stream_newlineWithSpaces = new RewriteRuleSubtreeStream(adaptor,"rule newlineWithSpaces");
        try 
    	{
            // SpecFlowLang.g:62:5: ( AT word ( newlineWithSpaces | WS ) -> ^( TAG word ) )
            // SpecFlowLang.g:62:9: AT word ( newlineWithSpaces | WS )
            {
            	AT15=(IToken)Match(input,AT,FOLLOW_AT_in_tag451); if (state.failed) return retval; 
            	if ( (state.backtracking==0) ) stream_AT.Add(AT15);

            	PushFollow(FOLLOW_word_in_tag453);
            	word16 = word();
            	state.followingStackPointer--;
            	if (state.failed) return retval;
            	if ( (state.backtracking==0) ) stream_word.Add(word16.Tree);
            	// SpecFlowLang.g:62:17: ( newlineWithSpaces | WS )
            	int alt11 = 2;
            	int LA11_0 = input.LA(1);

            	if ( (LA11_0 == WS) )
            	{
            	    int LA11_1 = input.LA(2);

            	    if ( (LA11_1 == EOF || (LA11_1 >= WS && LA11_1 <= AT) || (LA11_1 >= 40 && LA11_1 <= 42)) )
            	    {
            	        alt11 = 2;
            	    }
            	    else if ( (LA11_1 == NEWLINE) )
            	    {
            	        alt11 = 1;
            	    }
            	    else 
            	    {
            	        if ( state.backtracking > 0 ) {state.failed = true; return retval;}
            	        NoViableAltException nvae_d11s1 =
            	            new NoViableAltException("", 11, 1, input);

            	        throw nvae_d11s1;
            	    }
            	}
            	else if ( (LA11_0 == NEWLINE) )
            	{
            	    alt11 = 1;
            	}
            	else 
            	{
            	    if ( state.backtracking > 0 ) {state.failed = true; return retval;}
            	    NoViableAltException nvae_d11s0 =
            	        new NoViableAltException("", 11, 0, input);

            	    throw nvae_d11s0;
            	}
            	switch (alt11) 
            	{
            	    case 1 :
            	        // SpecFlowLang.g:62:18: newlineWithSpaces
            	        {
            	        	PushFollow(FOLLOW_newlineWithSpaces_in_tag456);
            	        	newlineWithSpaces17 = newlineWithSpaces();
            	        	state.followingStackPointer--;
            	        	if (state.failed) return retval;
            	        	if ( (state.backtracking==0) ) stream_newlineWithSpaces.Add(newlineWithSpaces17.Tree);

            	        }
            	        break;
            	    case 2 :
            	        // SpecFlowLang.g:62:36: WS
            	        {
            	        	WS18=(IToken)Match(input,WS,FOLLOW_WS_in_tag458); if (state.failed) return retval; 
            	        	if ( (state.backtracking==0) ) stream_WS.Add(WS18);


            	        }
            	        break;

            	}



            	// AST REWRITE
            	// elements:          word
            	// token labels:      
            	// rule labels:       retval
            	// token list labels: 
            	// rule list labels:  
            	// wildcard labels: 
            	if ( (state.backtracking==0) ) {
            	retval.Tree = root_0;
            	RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval", retval!=null ? retval.Tree : null);
